2007-06-06 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 404: fixed missing * in dc1394_format7_get_byte_per_packet
	           (thanks to Stian Skjelstad)

2007-06-14 Mikael Olenfalk <mikael.olenfalk@gmail.com>
	* SVN 403: Damien forgot to add the new files...
	* SVN 402: - added Basler Smart Feature Framework support
	           - vendor/basler.[ch]: the entry functions for Basler SFF
	             support
	           - vendor/basler_sff.h: types used for SFF
	           - vendor/basler_sff_registry.[ch]: internal functions and
     	             types for implemented SFF functionality

2007-06-06 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 401: Solved juju include problems (capture.h does not exist).
	           Version 2.0.0-rc7. 
	* SVN 400: Include juju directory in the package. Thanks to Desmond for
	           spotting this.

2007-06-05 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 399: Forgot to change some version numbers. This is 2.0.0-rc6.
	* SVN 398: Version 2.0.0-rc6
	
2007-06-04 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 397: get optional function registers only if the IIDC version is
	           > 1.30 (not >= 1.30). Thanks to Etienne Bieber.
	
2007-05-08 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 396: added an example program to capture video from a Ladybug
	           camera (Point Grey).
	
2007-04-26 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 395: add memset's in linux/capture.c to avoid valgrind errors
	           (thanks to Jon Schewe)
	* SVN 394: changed "min_bytes" to "unit_bytes" in
	           dc1394_format7_get_packet_para()
	
2007-03-18 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 393: Add a "juju" directory for the new kernel stack from Kristian
		   Hogsberg. Thanks to... Kristian Hogsberg for the big patch ;)

2007-03-12 Peter Antoniac http://sourceforge.net/users/theseinfeld
	* SVN 392: changed Makefile.am, configure.in to include the Doxygen part.